# Agentic-AI-Arichitectures

./: .gitignore  README.md  pyproject.toml
Multi_Agent/: README.md  multi_agent.py
PEV/: README.md  pev.py
Planning/: README.md  planning.py
React/: README.md  react.py
Reflection/: README.md  reflection.py
Tool_Use/: README.md  tool_use.py
